/searchTitle, /returnAll, /movies